tests/baselines/reference/project/intReferencingExtAndInt/node/intReferencingExtAndInt.errors.txt
internal2.ts(2,21): error TS1147: Import declarations in a namespace cannot reference a module.
internal2.ts(2,21): error TS2307: Cannot find module 'external2'.


==== internal2.ts (2 errors) ====
    module outer {
    	import g = require("external2")
    	                   ~~~~~~~~~~~
!!! error TS1147: Import declarations in a namespace cannot reference a module.
    	                   ~~~~~~~~~~~
!!! error TS2307: Cannot find module 'external2'.
    	export var a = g.square(5);
    	export var b = "foo";
    }